# organice will not reflow if there's hard-wrapped content
# -*- eval: (auto-fill-mode 0) -*-

* General

All user visible changes to organice will be documented in this file.

When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.

* [2023-01-04 Wed]

** Added

- Option to display DEADLINE values (near the clocking value) on each headline
  - The default for this option is false - so there is no change to the default behavior - until you enable this option via Settings.
  - PR: https://github.com/200ok-ch/organice/pull/891
  - Thank you [[https://github.com/dmorlitz][dmorlitz]] for the PR🙏

** Fixed

- Rotation of table editor icons to reflect their action.
  - PR: https://github.com/200ok-ch/organice/pull/890
  - Thank you [[https://github.com/dmorlitz][dmorlitz]] for the PR🙏

- Prevent the user from invalidating her Org file by entering a description that leads with =*=
  - If the user starts any line with a =*=, wanting to start a new list, it is immediately converted to a =-=.
  - PR: https://github.com/200ok-ch/organice/pull/920
  - Thank you [[https://github.com/saikiransathpadi][saikiransathpadi]] for the PR🙏

** Changed

- Disable auto-capitalization for search
  - Before:
    - When using the search or task list text inputs the Android/iOS keyboards automatically apply the shift key, meaning that the first character is capitalized.
    - 99% of the time this is not what we want because:
      - Having mixed case triggers a case sensitive search. This is quite confusing when I did not intentionally use capitalization, but it was added anyway. For example, I type "and", and it actually inputs and searches for "And", which yields no results.
      - Many of the keywords in the search grammar are lower case, e.g., =deadline:=, =desc:=.
  - Now: Auto-capitalization is turned off
  - PR: https://github.com/200ok-ch/organice/pull/914